# nn-utilities

./: .gitignore  README.md
nn_utilities/: README.md  pyproject.toml  setup.py
nn_utilities/nn_utilities/: keras_utilities.py  tfp_utilities.py
nn_utilities/tests/: test_keras_utilities.py  test_tfp_utilities.py
notebooks/: test_keras_utilities.ipynb
